ensight_lib/test/customFiles/testFlowFiles/invalidFiles/EnsightReader/readCaseFile/readCaseFile_missingGeometrySection.case
#################################################################################################
# 												#
# Test file for EnsightReaderTests::ReadCaseFile_MissingGeometrySection				#
#												#
#################################################################################################
FORMAT
type:  ensight gold
#
# GEOMETRY section intentionally ommited to trigger error event
#
